--- a/readme
+++ b/readme
@@ -1,206 +1,107 @@
-# Reliable UDP Telemetry Protocol
+# MiniTelemetry v1.0
 
-## Overview
-
-This project implements a **lightweight, reliable telemetry protocol over UDP**, designed for IoT and embedded systems operating under unreliable network conditions (loss, delay, duplication).
-
-Instead of relying on TCP or heavyweight protocols (e.g., MQTT-SN), reliability is implemented at the **application layer**, allowing full control over performance, overhead, and behavior.
-
----
-
-## Key Features
-
-* Custom UDP packet format with compact binary header
-* Application-layer reliability (ACK + retransmission)
-* Sequence number–based loss, gap, and duplication detection
-* Batch transmission for efficiency
-* Heartbeat mechanism for liveness detection
-* Packet reordering buffer with time window
-* Network impairment testing using Linux `netem`
-* CSV-based logging and metrics collection
-* Wireshark validation via PCAP capture
+MiniTelemetry is a lightweight UDP-based telemetry protocol designed for efficient
+collection of sensor data from distributed IoT devices.  
+It provides basic reliability features such as acknowledgments, retransmissions,
+duplicate detection, and packet reordering—without the overhead of TCP-based protocols
+like MQTT or CoAP.
 
 ---
 
-## Architecture
+## 🚀 Features
 
-The system consists of two main components:
-
-* **Client (Device Emulator)**
-
-  * Sends INIT, DATA, HEARTBEAT, and END messages
-  * Implements retransmission for unacknowledged packets
-
-* **Server (Collector)**
-
-  * Receives and parses packets
-  * Detects duplicates, gaps, and reordering
-  * Sends ACKs
-  * Logs telemetry data and performance metrics
-
-Communication is **direct UDP** with no broker or middleware.
+- UDP-based communication with minimal overhead
+- Batched telemetry readings per packet
+- Sequence numbers for duplicate and gap detection
+- ACK-based retransmission for reliability
+- Heartbeat messages for liveness detection
+- Reordering buffer to handle out-of-order packets
+- CSV-based persistent storage on the server
+- Network loss and delay evaluation using Linux `netem`
 
 ---
 
-## Packet Format
+## 📡 Protocol Overview
 
-### Header (11 bytes)
+**Protocol Name:** MiniTelemetry  
+**Version:** 1.0  
+**Transport:** UDP  
+**Default Report Interval:** 2 seconds  
+**Heartbeat Interval:** 5 seconds  
+**Max Packet Size:** ~2 KB  
 
-| Field       | Size | Description                                    |
-| ----------- | ---- | ---------------------------------------------- |
-| msg_type    | 1 B  | Message type (INIT, DATA, HEARTBEAT, ACK, END) |
-| device_id   | 2 B  | Unique device identifier                       |
-| seq         | 2 B  | Sequence number                                |
-| timestamp   | 4 B  | UNIX timestamp                                 |
-| batch_count | 1 B  | Number of readings                             |
-| padding     | 2 B  | Alignment                                      |
+### Entities
 
-### Payload (per reading)
+- **Client / Device**
+  - Sends INIT, DATA, and HEARTBEAT messages
+  - Maintains sequence numbers and retransmits unacknowledged packets
 
-| Field       | Size |
-| ----------- | ---- |
-| temperature | 4 B  |
-| humidity    | 4 B  |
-| timestamp   | 4 B  |
-
----
-
-## Message Types
-
-| Type      | Value | Purpose             |
-| --------- | ----- | ------------------- |
-| INIT      | 0     | Device registration |
-| DATA      | 1     | Telemetry batch     |
-| HEARTBEAT | 2     | Liveness check      |
-| ACK       | 3     | Acknowledgment      |
-| END       | 4     | End of test         |
+- **Server**
+  - Receives and validates packets
+  - Detects duplicates and sequence gaps
+  - Buffers and reorders readings
+  - Logs telemetry data to CSV
+  - Sends ACKs
 
 ---
 
-## Reliability Mechanism
+## 🔄 Message Types
 
-* Each DATA packet carries a **sequence number**
-* Server tracks last received sequence per device
-* Duplicate packets are detected and ignored
-* Missing sequences trigger **gap detection**
-* Client retransmits packets if ACK not received within timeout
-
-This achieves reliability without TCP overhead.
-
----
-
-## Reordering Handling
-
-Packets may arrive out of order under network impairments.
-
-The server:
-
-* Buffers packets per device
-* Uses a **reordering window (250 ms)**
-* Flushes packets sorted by payload timestamp
+| Type | Value | Description |
+|----|----|----|
+| INIT | 0 | Device registration |
+| DATA | 1 | Batched telemetry readings |
+| HEARTBEAT | 2 | Liveness check |
+| ACK | 3 | Acknowledgment |
 
 ---
 
-## Heartbeat Monitoring
+## 🧱 Message Format
 
-* Client sends HEARTBEAT messages periodically
-* Server tracks last heartbeat per device
-* Warns if a device becomes inactive
+### Header (12 bytes)
 
----
+| Field | Size | Description |
+|----|----|----|
+| Version | 4 bits | Protocol version |
+| MsgType | 4 bits | Message type |
+| DeviceID | 16 bits | Unique device identifier |
+| SeqNum | 16 bits | Sequence number |
+| Timestamp | 32 bits | Unix epoch |
+| BatchCnt | 8 bits | Number of readings |
+| Padding | 16 bits | Alignment |
 
-## Metrics Collected
+### Payload (per reading – 12 bytes)
 
-Metrics are written to `metrics_summary.csv`:
-
-* Bytes per report
-* Total packets received
-* Duplicate rate
-* Sequence gap count
-* CPU processing time per report (ms)
-
-Raw telemetry data is stored in `telemetry_log.csv`.
-
----
-
-## Network Impairment Testing
-
-Linux `netem` is used to emulate real network conditions:
-
-* Packet loss
-* Delay
-* Normal (baseline)
-
-Example:
-
-```bash
-./test_netem.sh loss
-./test_netem.sh delay
-./test_netem.sh clean
-```
+| Field | Size |
+|----|----|
+| Temperature | 32 bits |
+| Humidity | 32 bits |
+| Reading Timestamp | 32 bits |
 
 ---
 
-## Wireshark Validation
+## 🧪 Reliability Mechanisms
 
-Traffic can be captured using:
-
-```bash
-sudo tcpdump -i lo udp port 5053 -w telemetry_test.pcap
-```
-
-The `.pcap` file can be inspected in Wireshark to verify:
-
-* UDP packets
-* Custom header fields
-* Sequence numbers
-* Retransmissions
+- **ACKs:** Every DATA packet is acknowledged
+- **Retransmission:** Timeout-based (3 seconds)
+- **Duplicate Detection:** `SeqNum <= last_seq`
+- **Gap Detection:** `SeqNum - last_seq > 1`
+- **Reordering Buffer:** 250 ms window before CSV write
 
 ---
 
-## How to Run
+## 📊 Metrics Collected
 
-### Start Server
-
-```bash
-python3 server.py
-```
-
-### Run Client
-
-```bash
-python3 client.py --batch=2 --device_id=101
-```
-
-### Automated Testing
-
-```bash
-python3 test.py --cmd=loss
-```
+- Bytes per report
+- Packets received
+- Duplicate rate
+- Sequence gap count
+- CPU time per report
 
 ---
 
-## Motivation & Comparison
+## 🧪 Experimental Evaluation
 
-| Protocol          | Pros                          | Cons                             |
-| ----------------- | ----------------------------- | -------------------------------- |
-| UDP               | Fast, low overhead            | No reliability                   |
-| TCP               | Reliable                      | High latency, congestion control |
-| MQTT-SN           | Standardized                  | Broker-based, overhead           |
-| **This Protocol** | Lightweight, reliable, direct | Application-specific             |
+Network conditions were simulated using Linux `tc/netem`.
 
----
-
-## Use Cases
-
-* IoT telemetry
-* Embedded systems
-* Sensor networks
-* Real-time monitoring
-* Network protocol experimentation
-
----
-
-## Conclusion
-
-This project demonstrates that **reliable telemetry can be achieved over UDP** using a carefully designed application-layer protocol, offering better control, lower overhead, and suitability for constrained environments.
+### Baseline
